--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,11 +10,12 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=emubank.bot@gmail.com
-spring.mail.password=050224bank
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=emubank.bot@gmail.com
+#spring.mail.password=kdwmyrikrdqjtjop
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.properties.mail.smtp.starttls.required=true
+#spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
