--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,12 @@
 spring.application.name=BankingEmulation
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/emubank
-#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-#
-#spring.datasource.username=root
-#spring.datasource.password=28102002
-#
-#spring.jpa.hibernate.ddl-auto=create-drop
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.url=jdbc:mysql://localhost:3306/emubank
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
-spring.datasource.url=jdbc:h2:mem:emubank
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.username=root
+spring.datasource.password=28102002
+
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
