--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,15 @@
 spring.application.name=BankingEmulation
 
-server.port=${PORT}
-
-spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD}
-spring.datasource.username=${JDBC_DATABASE_USERNAME}
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-
+#server.port=${PORT}
+#
+#spring.datasource.url=${JDBC_DATABASE_URL}
+#spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+#spring.datasource.username=${JDBC_DATABASE_USERNAME}
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.password=28102002
+spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://localhost:3306/emubank
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+server.port=8888
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
